# peptide-ccs-analysis

./: LICENSE  Makefile  README.md  pyproject.toml
datasets/raw/: Gpos_1_SASA_df.csv  Gpos_1_helix_content_df.csv  Gpos_1_mean_helix_content_vs_residue.csv  Gpos_2_SASA_df.csv  Gpos_2_helix_content_df.csv  Gpos_2_mean_helix_content_vs_residue.csv
docs/: mkdocs.yml
docs/docs/: index.md
peptide_ccs_analysis/: constants.py  load_data.py
peptide_ccs_analysis/figures/: plotting.py  utils.py
peptide_ccs_analysis/models/: custom_shared_spline_gam.py  loading.py  utils.py
saved_models/: AbsoluteCCSSharedSplineGAM_InternalBasicSiteAwayFromCTermLowMode_params.npz  AbsoluteCCSSharedSplineGAM_InternalBasicSiteNearCTermHighMode_params.npz  CCSModeSharedSplineGAM_InternalBasicSiteAwayFromCTerm_params.npz  CCSModeSharedSplineGAM_InternalBasicSiteNearCTerm_params.npz
scripts/: 01_train_all_models.py  02_plot_all_figures.py
tests/: test_constants.py  test_load_data.py
tests/figures/: test_plotting.py
tests/models/: test_models.py  test_utils.py
